[package]
name = "rotor-tools"
description = """
    Various utility things for comfortable writing of application and protocols
    using rotor library
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["mio", "rotor", "async"]
homepage = "http://github.com/tailhook/rotor-tools"
documentation = "http://tailhook.github.io/rotor-tools"
version = "0.2.0"
authors = ["paul@colomiets.name"]

[dependencies]
rotor = {git="git://github.com/tailhook/rotor", rev="d001aa3"}

[lib]
name = "rotor_tools"
